--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       </header>
 
       <main>
-        <section class="fullscreen-wrapper dark-section">
+        <section class="fullscreen-wrapper dark-section d-flex">
           <img class="bg-image" src="assets/images/pure-malt-lg.jpg">
 
-          <div class="w-50">
+          <div class="w-50 align-self-end">
             <h2 class="invert">Pure <br>Malt Beer</h2>
           </div>
         </section>
