simple home wrappers complete, responsiveness TODO

--- a/index.html
+++ b/index.html
@@ -52,17 +52,37 @@
 
       <main>
         <section class="fullscreen-wrapper dark-section d-flex">
-          <img class="bg-image" src="assets/images/pure-malt-lg.jpg">
+          <img class="bg-image" src="assets/images/pure-malt-lg.jpg" alt="Paxis Teaser">
 
-          <div class="w-50 align-self-end">
+          <div data-aos="fade-right" data-aos-easing="ease-out-cubic" class="w-50 align-self-end">
             <h2 class="invert">Pure <br>Malt Beer</h2>
           </div>
         </section>
-        <section class="fullscreen-wrapper dark-section">
 
+        <section class="fullscreen-wrapper dark-section">
+          <img class="bg-image" src="assets/images/brewery-lg.jpg" alt="Cervejaria">
+          <div class="row">
+            <div class="col-md-4 offset-md-7" data-aos="fade">
+              <h3 class="section-title invert">Cervejaria Praxis</h3>
+              <h5 class="section-description invert">A Praxis (MICROCERVEJARIA) devolve a Coimbra uma herança
+                 cervejeira onde o principal segredo é a Água de Coimbra.</h5>
+              <button class="button light">Visitar</button>
+            </div>
+          </div>
         </section>
-        <h1>Praxis Beer</h1>
-        <button class="button dark">Praxis Beer</button>
+
+        <section class="fullscreen-wrapper dark-section">
+          <img class="bg-image" src="assets/images/shop-lg.jpg" alt="Change me">
+          <div class="row">
+            <div class="col-md-4 offset-md-7" data-aos="fade">
+              <h3 class="section-title invert">Loja Praxis</h3>
+              <h5 class="section-description invert">
+                This is the perfect place to shop for souvenirs, find the ultimate glass to drink a Praxis or to reserve a growler. 
+                Proudly showcase your wilder side by visiting the Praxis Brewery!</h5>
+              <button class="button light">Visitar</button>
+            </div>
+          </div>
+        </section>
       </main>
     </body>
 
