--- a/index.html
+++ b/index.html
@@ -83,6 +83,56 @@
             </div>
           </div>
         </section>
+
+        <section class="fullscreen-wrapper light-section">
+          <h2 class="o-10">Novidades</h2>
+
+          <div class="carousel swiper-container swiper-container-horizontal">
+            <div class="swiper-wrapper row">
+              <div class="swiper-slide swiper-slide-active col-4">
+                <article class="card-article">
+                  <a class="card-article__link" href="#">
+                    <div class="card-article__media">
+                      <img src="https://s3.ca-central-1.amazonaws.com/medias.boreale.com/files/blog/_750x1150_crop_center-center_75_none/ipa-du-nord-est-6-2.jpg">
+                    </div>
+                    <div class="card-article__content">
+                      <h6 class="card-article__surtitle">Eventos</h6>
+                      <h4 class="card-article__title u-text-break">Quintas de standup Comedy</h4>
+                    </div>
+                  </a>
+                </article>
+              </div>  
+
+              <div class="swiper-slide col-4">
+                <article class="card-article">
+                  <a class="card-article__link" href="#">
+                    <div class="card-article__media">
+                      <img src="https://s3.ca-central-1.amazonaws.com/medias.boreale.com/files/blog/_750x1150_crop_center-center_75_none/ipa-du-nord-est-6-2.jpg">
+                    </div>
+                    <div class="card-article__content">
+                      <h6 class="card-article__surtitle">Eventos</h6>
+                      <h4 class="card-article__title u-text-break">Quintas de standup Comedy</h4>
+                    </div>
+                  </a>
+                </article>
+              </div>      
+
+              <div class="swiper-slide col-4">
+                <article class="card-article">
+                  <a class="card-article__link" href="#">
+                    <div class="card-article__media">
+                      <img src="https://s3.ca-central-1.amazonaws.com/medias.boreale.com/files/blog/_750x1150_crop_center-center_75_none/ipa-du-nord-est-6-2.jpg">
+                    </div>
+                    <div class="card-article__content">
+                      <h6 class="card-article__surtitle">Eventos</h6>
+                      <h4 class="card-article__title u-text-break">Quintas de standup Comedy</h4>
+                    </div>
+                  </a>
+                </article>
+              </div>            
+            </div>
+          </div>
+        </section>
       </main>
     </body>
 
