--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
             <div class="swiper-wrapper row">
               <div class="swiper-slide swiper-slide-active col-4">
                 <article class="card-article">
-                  <a class="card-article__link" href="#">
-                    <div class="card-article__media">
-                      <img src="https://s3.ca-central-1.amazonaws.com/medias.boreale.com/files/blog/_750x1150_crop_center-center_75_none/ipa-du-nord-est-6-2.jpg">
+                  <a class="card-article-link" href="#">
+                    <div class="card-article-media">
+                      <img src="./assets/images/news-standup-night.jpg">
                     </div>
-                    <div class="card-article__content">
-                      <h6 class="card-article__surtitle">Eventos</h6>
-                      <h4 class="card-article__title u-text-break">Quintas de standup Comedy</h4>
+                    <div class="card-article-content">
+                      <h6 class="card-article-surtitle">Eventos</h6>
+                      <h4 class="card-article-title">Quintas de standup Comedy</h4>
+                      <img src="./assets/images/news-arrow.svg" class="card-article-arrow">
                     </div>
                   </a>
                 </article>
@@ -105,13 +106,14 @@
 
               <div class="swiper-slide col-4">
                 <article class="card-article">
-                  <a class="card-article__link" href="#">
-                    <div class="card-article__media">
-                      <img src="https://s3.ca-central-1.amazonaws.com/medias.boreale.com/files/blog/_750x1150_crop_center-center_75_none/ipa-du-nord-est-6-2.jpg">
+                  <a class="card-article-link" href="#">
+                    <div class="card-article-media">
+                      <img src="./assets/images/news-topazio.jpg">
                     </div>
-                    <div class="card-article__content">
-                      <h6 class="card-article__surtitle">Eventos</h6>
-                      <h4 class="card-article__title u-text-break">Quintas de standup Comedy</h4>
+                    <div class="card-article-content">
+                      <h6 class="card-article-surtitle">Notícias</h6>
+                      <h4 class="card-article-title">Cervejas emblemáticas de Coimbra</h4>
+                      <img src="./assets/images/news-arrow.svg" class="card-article-arrow">
                     </div>
                   </a>
                 </article>
@@ -119,13 +121,14 @@
 
               <div class="swiper-slide col-4">
                 <article class="card-article">
-                  <a class="card-article__link" href="#">
-                    <div class="card-article__media">
-                      <img src="https://s3.ca-central-1.amazonaws.com/medias.boreale.com/files/blog/_750x1150_crop_center-center_75_none/ipa-du-nord-est-6-2.jpg">
+                  <a class="card-article-link" href="#">
+                    <div class="card-article-media">
+                      <img src="./assets/images/news-bsda.jpg">
                     </div>
-                    <div class="card-article__content">
-                      <h6 class="card-article__surtitle">Eventos</h6>
-                      <h4 class="card-article__title u-text-break">Quintas de standup Comedy</h4>
+                    <div class="card-article-content">
+                      <h6 class="card-article-surtitle">Novidades</h6>
+                      <h4 class="card-article-title">B.S.D.A.</h4>
+                      <img src="./assets/images/news-arrow.svg" class="card-article-arrow">
                     </div>
                   </a>
                 </article>
