few tweaks in homepage, beers & responsive missing

--- a/index.html
+++ b/index.html
@@ -70,26 +70,13 @@
             </div>
           </div>
         </section>
-
-        <section class="fullscreen-wrapper dark-section">
-          <img class="bg-image" src="assets/images/shop-lg.jpg" alt="Change me">
-          <div class="row">
-            <div class="col-md-4 offset-md-7" data-aos="fade">
-              <h3 class="section-title invert">Loja Praxis</h3>
-              <h5 class="section-description invert">
-                This is the perfect place to shop for souvenirs, find the ultimate glass to drink a Praxis or to reserve a growler. 
-                Proudly showcase your wilder side by visiting the Praxis Brewery!</h5>
-              <button class="button light">Visitar</button>
-            </div>
-          </div>
-        </section>
-
+        
         <section class="fullscreen-wrapper light-section">
           <h2 class="o-10">Novidades</h2>
 
           <div class="carousel swiper-container swiper-container-horizontal">
-            <div class="swiper-wrapper row">
-              <div class="swiper-slide swiper-slide-active col-4">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
                 <article class="card-article">
                   <a class="card-article-link" href="#">
                     <div class="card-article-media">
@@ -104,7 +91,7 @@
                 </article>
               </div>  
 
-              <div class="swiper-slide col-4">
+              <div class="swiper-slide">
                 <article class="card-article">
                   <a class="card-article-link" href="#">
                     <div class="card-article-media">
@@ -119,7 +106,7 @@
                 </article>
               </div>      
 
-              <div class="swiper-slide col-4">
+              <div class="swiper-slide">
                 <article class="card-article">
                   <a class="card-article-link" href="#">
                     <div class="card-article-media">
@@ -133,6 +120,19 @@
                   </a>
                 </article>
               </div>            
+            </div>
+          </div>
+        </section>
+
+        <section class="fullscreen-wrapper dark-section">
+          <img class="bg-image" src="assets/images/shop-lg.jpg" alt="Change me">
+          <div class="row">
+            <div class="col-md-4 offset-md-7" data-aos="fade">
+              <h3 class="section-title invert">Loja Praxis</h3>
+              <h5 class="section-description invert">
+                This is the perfect place to shop for souvenirs, find the ultimate glass to drink a Praxis or to reserve a growler. 
+                Proudly showcase your wilder side by visiting the Praxis Brewery!</h5>
+              <button class="button light">Visitar</button>
             </div>
           </div>
         </section>
