beer animation, WIP

--- a/beers.html
+++ b/beers.html
@@ -55,61 +55,62 @@
             <div id="obj_1" class="obj active">
                 <div class="cover" data-velocity="-10">
                     <div class="picture">
+                        <span class="label obj-label-left">Descobrir</span>
+                        <span class="label obj-label-right">Pilsener</span>
                         <img src="./assets/images/pilsener-beer.png" class="media"/>
                     </div>
-                    <a class="title parallax" data-velocity="-50" href="#">
-                        <h3>Weiss</h3>
-                    </a>
+                    <h3 class="title parallax" data-velocity="-50">Weiss</h3>
                 </div>
             </div>
             <div id="obj_2" class="obj">
                 <div class="cover" data-velocity="-10">
                     <div class="picture">
+                        <span class="label obj-label-left">Descobrir</span>
+                        <span class="label obj-label-right">Pilsener</span>
                         <img src="./assets/images/pilsener-beer.png" class="media"/>
                     </div>
-                    <a class="title parallax" data-velocity="-50" href="#">
-                        <h3>Pilsener</h3>
-                    </a>
+                    <h3 class="title parallax" data-velocity="-50">Pilsener</h3>
                 </div>
             </div>
             <div id="obj_3" class="obj">
                 <div class="cover" data-velocity="-10">
                     <div class="picture">
+                        <span class="label obj-label-left">Descobrir</span>
+                        <span class="label obj-label-right">Pilsener</span>
                         <img src="./assets/images/pilsener-beer.png" class="media"/>
                     </div>
-                    <a class="title parallax" data-velocity="-50" href="#">
-                        <h3>Ambar</h3>
-                    </a>
+                    <h3 class="title parallax" data-velocity="-50">Ambar</h3>
                 </div>
             </div>
             <div id="obj_4" class="obj">
                 <div class="cover" data-velocity="-10">
                     <div class="picture">
+                        <span class="label obj-label-left">Descobrir</span>
+                        <span class="label obj-label-right">Pilsener</span>
                         <img src="./assets/images/pilsener-beer.png" class="media"/>
                     </div>
-                    <a class="title parallax" data-velocity="-50" href="#">
-                        <h3>Pumpkin Ale</h3>
+                    <h3 class="title parallax" data-velocity="-50">Pumpkin Ale</h3>
                     </a>
                 </div>
             </div> 
             <div id="obj_5" class="obj">
                 <div class="cover" data-velocity="-10">
                     <div class="picture">
+                        <span class="label obj-label-left">Descobrir</span>
+                        <span class="label obj-label-right">Pilsener</span>
                         <img src="./assets/images/pilsener-beer.png" class="media"/>
                     </div>
-                    <a class="title parallax" data-velocity="-50" href="#">
-                        <h3>Pilsener</h3>
-                    </a>
+                    <h3 class="title parallax" data-velocity="-50">Pilsener</h3>
                 </div>
             </div> 
             <div id="obj_6" class="obj">
                 <div class="cover" data-velocity="-10">
                     <div class="picture">
+                        <span class="label obj-label-left">Descobrir</span>
+                        <span class="label obj-label-right">Pilsener</span>
                         <img src="./assets/images/pilsener-beer.png" class="media"/>
                     </div>
-                    <a class="title parallax" data-velocity="-50" href="#">
-                        <h3>Pilsener</h3>
-                    </a>
+                    <h3 class="title parallax" data-velocity="-50">Pilsener</h3>
                 </div>
             </div> 
         </section>
