--- a/beers.html
+++ b/beers.html
@@ -26,10 +26,6 @@
     <meta property="article:author" content="https://www.facebook.com/cervejaPraxis"/>
     
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     </head>
 
     <body>
@@ -45,6 +41,26 @@
           <div class="overlay">
             <div class="overlay-backdrop"></div>
             <div class="menu-panel">
+                <div class="menu-panel">
+                    <a href="beers.html" class="menu-link">
+                        Cervejas
+                    </a>
+                    <a href="museum.html" class="menu-link">
+                        Museu
+                    </a>
+                    <a href="restaurant.html" class="menu-link">
+                        Restaurante
+                    </a>
+                    <a href="brewery.html" class="menu-link">
+                        Fábrica Praxis
+                    </a>
+                    <a href="community.html" class="menu-link">
+                        Comunidade
+                    </a>
+                    <a href="shop.html" class="menu-link">
+                        Loja
+                    </a>
+                 </div>
             </div>
           </div>
         </nav>
@@ -147,6 +163,7 @@
       </main>
     </body>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/utils/Draggable.min.js"></script>
     <script src="assets/js/beer-scroll.js"></script>
