--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     <meta property="article:author" content="https://www.facebook.com/cervejaPraxis"/>
     
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     </head>
 
     <body>
@@ -45,6 +42,24 @@
           <div class="overlay">
             <div class="overlay-backdrop"></div>
             <div class="menu-panel">
+              <a href="beers.html" class="menu-link">
+                Cervejas
+              </a>
+              <a href="museum.html" class="menu-link">
+                Museu
+              </a>
+              <a href="restaurant.html" class="menu-link">
+                Restaurante
+              </a>
+              <a href="brewery.html" class="menu-link">
+                Fábrica Praxis
+              </a>
+              <a href="community.html" class="menu-link">
+                Comunidade
+              </a>
+              <a href="shop.html" class="menu-link">
+                Loja
+              </a>
             </div>
           </div>
         </nav>
@@ -54,7 +69,7 @@
         <section class="fullscreen-wrapper dark-section d-flex">
           <img class="bg-image" src="assets/images/pure-malt-lg.jpg" alt="Paxis Teaser">
 
-          <div data-aos="fade-right" data-aos-easing="ease-out-cubic" class="w-50 align-self-end">
+          <div class="w-50 align-self-end">
             <h2 class="invert">Pure <br>Malt Beer</h2>
           </div>
         </section>
@@ -62,7 +77,7 @@
         <section class="fullscreen-wrapper dark-section">
           <img class="bg-image" src="assets/images/brewery-lg.jpg" alt="Cervejaria">
           <div class="row">
-            <div class="col-md-4 offset-md-7" data-aos="fade">
+            <div class="col-md-4 offset-md-7">
               <h3 class="section-title invert">Cervejaria Praxis</h3>
               <h5 class="section-description invert">A Praxis (MICROCERVEJARIA) devolve a Coimbra uma herança
                  cervejeira onde o principal segredo é a Água de Coimbra.</h5>
@@ -223,7 +238,7 @@
         <section class="fullscreen-wrapper dark-section">
           <img class="bg-image" src="assets/images/shop-lg.jpg" alt="Change me">
           <div class="row">
-            <div class="col-md-4 offset-md-7" data-aos="fade">
+            <div class="col-md-4 offset-md-7">
               <h3 class="section-title invert">Loja Praxis</h3>
               <h5 class="section-description invert">
                 This is the perfect place to shop for souvenirs, find the ultimate glass to drink a Praxis or to reserve a growler. 
@@ -235,6 +250,8 @@
       </main>
     </body>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/utils/Draggable.min.js"></script>
     <script src="assets/js/beer-scroll.js"></script>
