--- a/beers.html
+++ b/beers.html
@@ -65,19 +65,20 @@
       </header>
 
       <main class="beers-page">
-        <section class="beer-wrapper dark-section" id="beer-wrapper">
-            <div id="obj_1" class="obj active">
-                <div class="cover" data-velocity="-10">
+        <section class="beer-wrapper dark-section wrapper" id="js-wrapper">
+            <div class="sections" id="js-slideContainer">
+            <div id="obj_1" class="obj">
+                <a href="beers/pilsener.html" class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">Pilsener</span>
                         <img src="./assets/images/pilsener-beer-lg.png" class="media"/>
                     </div>
                     <h3 class="title">Pilsener</h3>
-                </div>
+                </a>
             </div>
             <div id="obj_2" class="obj">
-                <div class="cover" data-velocity="-10">
+                <div class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">Dunkel</span>
@@ -87,7 +88,7 @@
                 </div>
             </div>
             <div id="obj_3" class="obj">
-                <div class="cover" data-velocity="-10">
+                <div class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">Ambar</span>
@@ -97,7 +98,7 @@
                 </div>
             </div>
             <div id="obj_4" class="obj">
-                <div class="cover" data-velocity="-10">
+                <div class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">Weiss</span>
@@ -108,7 +109,7 @@
                 </div>
             </div> 
             <div id="obj_5" class="obj">
-                <div class="cover" data-velocity="-10">
+                <div class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">Belgian Dark</span>
@@ -118,7 +119,7 @@
                 </div>
             </div> 
             <div id="obj_6" class="obj">
-                <div class="cover" data-velocity="-10">
+                <div class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">Portuguese Pedro</span>
@@ -128,7 +129,7 @@
                 </div>
             </div> 
             <div id="obj_7" class="obj">
-                <div class="cover" data-velocity="-10">
+                <div class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">IPA</span>
@@ -138,7 +139,7 @@
                 </div>
             </div> 
             <div id="obj_8" class="obj">
-                <div class="cover" data-velocity="-10">
+                <div class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">Pumpkin Ale</span>
@@ -148,7 +149,7 @@
                 </div>
             </div> 
             <div id="obj_9" class="obj">
-                <div class="cover" data-velocity="-10">
+                <div class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
                         <span class="label obj-label-right">Lausus</span>
@@ -157,13 +158,17 @@
                     <h3 class="title">Lausus</h3>
                 </div>
             </div> 
+            </div>
         </section>
       </main>
     </body>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/utils/Draggable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="assets/js/beer-scroll.js"></script>
     <script src="assets/js/navigation.js"></script>
     
