--- a/beers.html
+++ b/beers.html
@@ -65,99 +65,121 @@
       </header>
 
       <main class="beers-page">
-        <section class="beer-wrapper dark-section wrapper" id="js-wrapper">
-            <div class="sections" id="js-slideContainer">
-            <div id="obj_1" class="obj">
-                <a href="beers/pilsener.html" class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Pilsener</span>
-                        <img src="./assets/images/pilsener-beer-lg.png" class="media"/>
-                    </div>
-                    <h3 class="title">Pilsener</h3>
-                </a>
-            </div>
-            <div id="obj_2" class="obj">
-                <div class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Dunkel</span>
-                        <img src="./assets/images/dunkel-beer-lg.png" class="media"/>
-                    </div>
-                    <h3 class="title">Dunkel</h3>
-                </div>
-            </div>
-            <div id="obj_3" class="obj">
-                <div class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Ambar</span>
-                        <img src="./assets/images/ambar-beer-lg.png" class="media"/>
-                    </div>
-                    <h3 class="title">Ambar</h3>
-                </div>
-            </div>
-            <div id="obj_4" class="obj">
-                <div class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Weiss</span>
-                        <img src="./assets/images/weiss-beer-lg.png" class="media"/>
-                    </div>
-                    <h3 class="title">Weiss</h3>
+          <section class="section-items bg-dark text-white">
+            <div class="scroll-slider">
+                <div class="scroll-wrapper">
+                <article class="item scroll-slide">
+                    <a href="beers/pilsener.html" class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Pilsener</span>
+                            <img src="./assets/images/pilsener-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Pilsener</h3>
                     </a>
-                </div>
-            </div> 
-            <div id="obj_5" class="obj">
-                <div class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Belgian Dark</span>
-                        <img src="./assets/images/belgian-dark-beer-lg.png" class="media"/>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Dunkel</span>
+                            <img src="./assets/images/dunkel-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Dunkel</h3>
                     </div>
-                    <h3 class="title">Belgian Dark</h3>
-                </div>
-            </div> 
-            <div id="obj_6" class="obj">
-                <div class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Portuguese Pedro</span>
-                        <img src="./assets/images/pedro-beer-lg.png" class="media"/>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Ambar</span>
+                            <img src="./assets/images/ambar-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Ambar</h3>
                     </div>
-                    <h3 class="title">Portuguese<br>Pedro</h3>
-                </div>
-            </div> 
-            <div id="obj_7" class="obj">
-                <div class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">IPA</span>
-                        <img src="./assets/images/ipa-beer-lg.png" class="media"/>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Weiss</span>
+                            <img src="./assets/images/weiss-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Weiss</h3>
+                        </a>
                     </div>
-                    <h3 class="title">IPA</h3>
-                </div>
-            </div> 
-            <div id="obj_8" class="obj">
-                <div class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Pumpkin Ale</span>
-                        <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Belgian Dark</span>
+                            <img src="./assets/images/belgian-dark-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Belgian Dark</h3>
                     </div>
-                    <h3 class="title">Pumpkin Ale</h3>
-                </div>
-            </div> 
-            <div id="obj_9" class="obj">
-                <div class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Lausus</span>
-                        <img src="./assets/images/lausus-beer-lg.png" class="media"/>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Portuguese Pedro</span>
+                            <img src="./assets/images/pedro-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Portuguese<br>Pedro</h3>
                     </div>
-                    <h3 class="title">Lausus</h3>
-                </div>
-            </div> 
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">IPA</span>
+                            <img src="./assets/images/ipa-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">IPA</h3>
+                    </div>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Pumpkin Ale</span>
+                            <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Pumpkin Ale</h3>
+                    </div>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Lausus</span>
+                            <img src="./assets/images/lausus-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Lausus</h3>
+                    </div>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">B.S.D.A</span>
+                            <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">B.S.D.A</h3>
+                    </div>
+                </article>
+                <article class="item scroll-slide">
+                    <div class="cover">
+                        <div class="picture">
+                            <span class="label obj-label-left">Descobrir</span>
+                            <span class="label obj-label-right">Strong Dunkel</span>
+                            <img src="./assets/images/lausus-beer-lg.png" class="media"/>
+                        </div>
+                        <h3 class="title">Strong Dunkel</h3>
+                    </div>
+                </article>
+            </div>
             </div>
         </section>
       </main>
@@ -165,7 +187,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/utils/Draggable.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/utils/Draggable.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
