--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -106,24 +106,24 @@
               </div>
             </div>
 
-            <div class="row b-all beer-specs-container">
-              <div class="col-2 specs-card">
+            <div class="row b-all beer-specs-container pilsener-specs">
+              <div class="col-2 beer-specs-card">
                 <h6>Tipo</h6>
                 <h4>APA</h4>
               </div>
-              <div class="col-2 specs-card">
-                <h6>Alcool</h6>
+              <div class="col-2 beer-specs-card">
+                <h6>Álcool</h6>
                 <h4>6%</h4>
               </div>
-              <div class="col-2 specs-card">
+              <div class="col-2 beer-specs-card">
                 <h6>IBU</h6>
                 <h4>35</h4>
               </div>
-              <div class="col-2 specs-card">
+              <div class="col-2 beer-specs-card">
                 <h6>Desde</h6>
                 <h4>Maio 2016</h4>
               </div>
-              <div class="col-4 specs-card">
+              <div class="col-4 beer-specs-card">
                 <h6>Cor</h6>
                 <div class="mt-4">
                   <span class="beer-color"></span>
@@ -137,11 +137,36 @@
                   <span class="beer-color"></span>
                 </div>
               </div>
-
             </div>
-            
           </section>
         </div>
+
+        <section class="beer-recomendation-wrapper row">
+          <div class="col-md-7 beer-recomendation-image-link">
+            <img src="../assets/images/pilsener-recommend.jpg">
+          </div>
+          <div class="col-md-6 offset-md-6 beer-recomendation-card-container">
+            <div class="beer-recomendation-card d-flex flex-column justify-content-between">
+              <div>
+                <h3 class="beer-recomendation-title">Recomendações</h3>
+                <h4 class="beer-recomendation-subtitle">Como Beber</h4>
+                <h5 class="beer-recomendation-description">Irresistível com uma terrina de foie gras com beringela e nozes. 
+                  Estupenda opção para acompanhar uns deliciosos brownies de caramelo e crostini de nozes com queijo chèvre. 
+                  Servir a uma temperatura entre 12 e 14ºC.</h5>
+              </div>
+              <div class="row b-all">
+                <div class="col-4 beer-specs-recommend-card">
+                  <h6>Temperatura</h6>
+                  <h4>5ºC</h4>
+                </div>
+                <div class="col-8 beer-specs-recommend-card">
+                  <h6>Sabores</h6>
+                  <h4>Abóbora <span class="beer-specs-separator"></span> Amendoim</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
       </main>
     </body>
