add icon button

--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -79,7 +79,7 @@
             </div>
           </section>
 
-          <section class="fullscreen-wrapper beer-info-wrapper">
+          <section class="fullscreen-wrapper beer-info-wrapper d-flex flex-column justify-content-between">
             <div class="row beer-row">
               <div class="beer-name-col col-md-4">
                 <h2 class="beer-name">Pilse<br>ner</h2>
@@ -99,10 +99,13 @@
                   <p><img src="../assets/images/hop-vector.svg">
                   Lúpulo e Leveduras</p>
                 </div>
-                <div class="form-group">
-                  <input>
-                  <button class="button dark">Comprar</button>
-                </div>
+
+                <!--<div class="form-group">
+                  <button class="button button-icon dark">
+                    <img src="../assets/images/shopping-cart-icon.svg">
+                    Adicionar
+                  </button>
+                </div>-->
               </div>
             </div>
 
