--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -68,7 +68,8 @@
       <main>
         <div class="two-section-sticky">
           <div class="beer-bottle">
-            <img class="bottle-img" id="bottle-shr" src="../assets/images/pilsener-beer-lg.png">
+            <img class="beer-bottle-img-lg" src="../assets/images/pilsener-beer-lg.png">
+            <img class="beer-bottle-img-sm" src="../assets/images/pilsener-beer-sm.png">
           </div>
 
           <section class="fullscreen-wrapper pilsener-wrapper d-flex">
@@ -79,7 +80,7 @@
             </div>
           </section>
 
-          <section class="fullscreen-wrapper beer-info-wrapper d-flex flex-column justify-content-between">
+          <section class="beer-info-wrapper d-flex flex-column justify-content-between">
             <div class="row beer-row">
               <div class="beer-name-col col-md-4">
                 <h2 class="beer-name">Pilse<br>ner</h2>
@@ -109,24 +110,24 @@
               </div>
             </div>
 
-            <div class="row b-all beer-specs-container pilsener-specs">
-              <div class="col-2 beer-specs-card">
+            <div class="row beer-specs-container pilsener-specs">
+              <div class="col-6 col-md-2 beer-specs-card b-all">
                 <h6>Tipo</h6>
                 <h4>APA</h4>
               </div>
-              <div class="col-2 beer-specs-card">
+              <div class="col-6 col-md-2 beer-specs-card b-all">
                 <h6>Álcool</h6>
                 <h4>6%</h4>
               </div>
-              <div class="col-2 beer-specs-card">
+              <div class="col-6 col-md-2 beer-specs-card b-all">
                 <h6>IBU</h6>
                 <h4>35</h4>
               </div>
-              <div class="col-2 beer-specs-card">
+              <div class="col-6 col-md-2 beer-specs-card b-all">
                 <h6>Desde</h6>
                 <h4>Maio 2016</h4>
               </div>
-              <div class="col-4 beer-specs-card">
+              <div class="col-12 col-md-4 beer-specs-card b-all">
                 <h6>Cor</h6>
                 <div class="mt-4">
                   <span class="beer-color"></span>
@@ -155,14 +156,14 @@
                 <h4 class="beer-recomendation-subtitle">Como Beber</h4>
                 <h5 class="beer-recomendation-description">Irresistível com uma terrina de foie gras com beringela e nozes. 
                   Estupenda opção para acompanhar uns deliciosos brownies de caramelo e crostini de nozes com queijo chèvre. 
-                  Servir a uma temperatura entre 12 e 14ºC.</h5>
+                </h5>
               </div>
               <div class="row b-all">
-                <div class="col-4 beer-specs-recommend-card">
+                <div class="col-5 col-md-4 beer-specs-recommend-card">
                   <h6>Temperatura</h6>
-                  <h4>5ºC</h4>
+                  <h4>5 - 7ºC</h4>
                 </div>
-                <div class="col-8 beer-specs-recommend-card">
+                <div class="col-7 col-md-8 beer-specs-recommend-card">
                   <h6>Sabores</h6>
                   <h4>Abóbora <span class="beer-specs-separator"></span> Amendoim</h4>
                 </div>
