single beer page finished

--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -147,7 +147,11 @@
 
         <section class="beer-recomendation-wrapper row">
           <div class="col-md-7 beer-recomendation-image-link">
-            <img src="../assets/images/pilsener-recommend.jpg">
+            <img src="../assets/images/pilsener-recommend.jpg" class="beer-recomendation-bg">
+            <a href="../beers.html" class="beer-recomendation-link d-flex align-items-center">
+              <span class="mr-5">Restaurante</span>
+              <img src="../assets/images/news-arrow.svg" class="beer-recomendation-arrow">
+            </a>
           </div>
           <div class="col-md-6 offset-md-6 beer-recomendation-card-container">
             <div class="beer-recomendation-card d-flex flex-column justify-content-between">
