--- a/index.html
+++ b/index.html
@@ -42,7 +42,34 @@
           <div class="overlay">
             <div class="overlay-backdrop"></div>
             <div class="menu-panel">
-              <a href="beers.html" class="menu-link">
+              <ul>
+                <li class="menu-hasdropdown">
+                  <a href="beers.html" class="menu-link beers-link">
+                    <span class="selected-link">Cervejas</span>
+                    <label title="toggle menu" for="cervejas">>>></label>
+                  </a>
+                  <input type="checkbox" id="cervejas">
+                  <ul class="menu-dropdown">
+                    <li><a href="" class="submenu-link">Pilsener</a></li>
+                    <li><a href="" class="submenu-link">Dunkel</a></li>
+                    <li><a href="" class="submenu-link">Ambar</a></li>
+                    <li><a href="" class="submenu-link">Weiss</a></li>
+                    <li><a href="" class="submenu-link">Belgian Dark</a></li>
+                    <li><a href="" class="submenu-link">Portuguese Pedro</a></li>
+                    <li><a href="" class="submenu-link">IPA</a></li>
+                    <li><a href="" class="submenu-link">Pumpkin Ale</a></li>
+                    <li><a href="" class="submenu-link">Lausus</a></li>
+                    <li><a href="" class="submenu-link">Dunkel Strong</a></li>
+                    <li><a href="" class="submenu-link">B.S.D.A</a></li>
+                  </ul>
+                </li>
+                <li><a href="museum.html" class="menu-link">Museu</a></li>
+                <li><a href="restaurant.html" class="menu-link">Restaurante</a></li>
+                <li><a href="brewery.html" class="menu-link">Fábrica Praxis</a></li>
+                <li><a href="community.html" class="menu-link">Comunidade</a></li>
+                <li class="disabled"><a href="" class="menu-link">Loja Online</a></li>
+              </ul>
+              <!--<a href="beers.html" class="menu-link">
                 Cervejas
               </a>
               <a href="museum.html" class="menu-link">
@@ -59,7 +86,7 @@
               </a>
               <a href="shop.html" class="menu-link">
                 Loja
-              </a>
+              </a>-->
             </div>
           </div>
         </nav>
