--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
           </a>
 
           <div class="overlay">
-            <div class="overlay-backdrop"></div>
             <div class="menu-panel">
               <ul>
                 <li class="menu-hasdropdown">
                   <a href="beers.html" class="menu-link beers-link">
                     <span class="selected-link">Cervejas</span>
-                    <label title="toggle menu" for="cervejas">>>></label>
+                    <label title="toggle menu" for="cervejas">
+                      <img src="assets/images/navigation-arrow.svg">
+                    </label>
                   </a>
                   <input type="checkbox" id="cervejas">
                   <ul class="menu-dropdown">
-                    <li><a href="" class="submenu-link">Pilsener</a></li>
+                    <li><a href="beers/pilsener.html" class="submenu-link">Pilsener</a></li>
                     <li><a href="" class="submenu-link">Dunkel</a></li>
                     <li><a href="" class="submenu-link">Ambar</a></li>
                     <li><a href="" class="submenu-link">Weiss</a></li>
@@ -59,6 +60,7 @@
                     <li><a href="" class="submenu-link">IPA</a></li>
                     <li><a href="" class="submenu-link">Pumpkin Ale</a></li>
                     <li><a href="" class="submenu-link">Lausus</a></li>
+                    <li class="specials"><label>Especiais</label></li>
                     <li><a href="" class="submenu-link">Dunkel Strong</a></li>
                     <li><a href="" class="submenu-link">B.S.D.A</a></li>
                   </ul>
@@ -69,24 +71,23 @@
                 <li><a href="community.html" class="menu-link">Comunidade</a></li>
                 <li class="disabled"><a href="" class="menu-link">Loja Online</a></li>
               </ul>
-              <!--<a href="beers.html" class="menu-link">
-                Cervejas
-              </a>
-              <a href="museum.html" class="menu-link">
-                Museu
-              </a>
-              <a href="restaurant.html" class="menu-link">
-                Restaurante
-              </a>
-              <a href="brewery.html" class="menu-link">
-                Fábrica Praxis
-              </a>
-              <a href="community.html" class="menu-link">
-                Comunidade
-              </a>
-              <a href="shop.html" class="menu-link">
-                Loja
-              </a>-->
+              <div class="media-links-container d-flex">
+                <a href="" class="media-link facebook">
+                  <img src="assets/images/facebook-logo.svg">
+                </a>
+                <a href="" class="media-link instagram">
+                  <img src="assets/images/instagram-logo.svg">
+                </a>
+                <a href="" class="media-link youtube">
+                  <img src="assets/images/youtube-logo.svg">
+                </a>
+                <a href="" class="media-link tripadvisor">
+                  <img src="assets/images/tripadvisor-logo.svg">
+                </a>
+                <a href="" class="media-link untappd">
+                  <img src="assets/images/untappd-logo.svg">
+                </a>
+              </div>
             </div>
           </div>
         </nav>
