--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
           <div class="overlay">
             <div class="menu-panel">
+              <div class="lang-links-container">
+                <a href="" class="lang-link selected">PT</a>
+                <a href="" class="lang-link">EN</a>
+              </div>
               <ul>
                 <li class="menu-hasdropdown">
                   <a href="beers.html" class="menu-link beers-link">
@@ -72,19 +76,19 @@
                 <li class="disabled"><a href="" class="menu-link">Loja Online</a></li>
               </ul>
               <div class="media-links-container d-flex">
-                <a href="" class="media-link facebook">
+                <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
                   <img src="assets/images/facebook-logo.svg">
                 </a>
-                <a href="" class="media-link instagram">
+                <a href="https://www.instagram.com/praxisbeer/" class="media-link instagram">
                   <img src="assets/images/instagram-logo.svg">
                 </a>
                 <a href="" class="media-link youtube">
                   <img src="assets/images/youtube-logo.svg">
                 </a>
-                <a href="" class="media-link tripadvisor">
+                <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" class="media-link tripadvisor">
                   <img src="assets/images/tripadvisor-logo.svg">
                 </a>
-                <a href="" class="media-link untappd">
+                <a href="https://untappd.com/w/praxis/34853/" class="media-link untappd">
                   <img src="assets/images/untappd-logo.svg">
                 </a>
               </div>
