Add comment to missing link

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <a href="https://www.instagram.com/praxisbeer/" class="media-link instagram">
                   <img src="assets/images/instagram-logo.svg">
                 </a>
+                <!-- Youtube Link Missing -->
                 <a href="" class="media-link youtube">
                   <img src="assets/images/youtube-logo.svg">
                 </a>
