adding menu to other pages, favicon & fix links

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="author" content="beerpraxis.com">
     <link rel="canonical" href="http://www.beerpraxis.com">
-    <link rel="shortcut icon" type="image/png" href="assets/logo.png"/>
-    <link rel="icon" href="assets/logo.png" type="image/png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.jpg"/>
+    <link rel="icon" href="assets/images/favicon.jpg" type="image/jpg">
     
     <!-- Sharing -->
     <meta property="og:title" content="Praxis">
