--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -50,7 +50,7 @@
                   <a href="../beers.html" class="menu-link beers-link">
                     <span class="selected-link">Cervejas</span>
                     <label title="toggle menu" for="cervejas">
-                      <img src="assets/images/navigation-arrow.svg">
+                      <img src="../assets/images/navigation-arrow.svg">
                     </label>
                   </a>
                   <input type="checkbox" id="cervejas">
