update share img

--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -19,14 +19,13 @@
     <!-- Sharing -->
     <meta property="og:title" content="Praxis">
     <meta property="og:url" content="http://www.beerpraxis.com">
-    <meta property="og:image" content="https://i.imgur.com/LsSyow5.png">
+    <meta property="og:image" content="https://i.imgur.com/8clFRXr.jpg">
     <meta property="og:site_name" content="praxis">
     <meta property="og:description" content="Praxis Restaurante, Fábrica e Museu da Cerveja de Coimbra. Produzimos a Cerveja Praxis com várias variedades: Pilsener, Dunkel, Ambar, Weiss.">
     <meta property="article:publisher" content="https://www.facebook.com/cervejaPraxis"/>
     <meta property="article:author" content="https://www.facebook.com/cervejaPraxis"/>
     
     <link rel="stylesheet" type="text/css" href="../assets/stylesheets/application.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     </head>
 
     <body>
