--- a/beers.html
+++ b/beers.html
@@ -19,7 +19,7 @@
     <!-- Sharing -->
     <meta property="og:title" content="Praxis">
     <meta property="og:url" content="http://www.beerpraxis.com">
-    <meta property="og:image" content="https://i.imgur.com/LsSyow5.png">
+    <meta property="og:image" content="https://i.imgur.com/8clFRXr.jpg">
     <meta property="og:site_name" content="praxis">
     <meta property="og:description" content="Praxis Restaurante, Fábrica e Museu da Cerveja de Coimbra. Produzimos a Cerveja Praxis com várias variedades: Pilsener, Dunkel, Ambar, Weiss.">
     <meta property="article:publisher" content="https://www.facebook.com/cervejaPraxis"/>
@@ -112,27 +112,27 @@
                     </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/dunkel.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">Dunkel</span>
                             <img src="./assets/images/dunkel-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">Dunkel</h3>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/ambar.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">Ambar</span>
                             <img src="./assets/images/ambar-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">Ambar</h3>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/weiss.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">Weiss</span>
@@ -140,77 +140,77 @@
                         </div>
                         <h3 class="title">Weiss</h3>
                         </a>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/belgian-dark.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">Belgian Dark</span>
                             <img src="./assets/images/belgian-dark-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">Belgian Dark</h3>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/portuguese-pedro.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">Portuguese Pedro</span>
                             <img src="./assets/images/pedro-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">Portuguese<br>Pedro</h3>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/ipa.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">IPA</span>
                             <img src="./assets/images/ipa-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">IPA</h3>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/pumpkin-ale.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">Pumpkin Ale</span>
                             <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">Pumpkin Ale</h3>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/lausus.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">Lausus</span>
                             <img src="./assets/images/lausus-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">Lausus</h3>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/bsda.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">B.S.D.A</span>
                             <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">B.S.D.A</h3>
-                    </div>
+                    </a>
                 </article>
                 <article class="item scroll-slide">
-                    <div class="cover">
+                    <a href="beers/strong-dunkel.html" class="cover">
                         <div class="picture">
                             <span class="label obj-label-left">Descobrir</span>
                             <span class="label obj-label-right">Strong Dunkel</span>
                             <img src="./assets/images/lausus-beer-lg.png" class="media"/>
                         </div>
                         <h3 class="title">Strong Dunkel</h3>
-                    </div>
+                    </a>
                 </article>
             </div>
             </div>
@@ -220,10 +220,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/utils/Draggable.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="assets/js/beer-scroll.js"></script>
     <script src="assets/js/navigation.js"></script>
     
