--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
     <!-- Sharing -->
     <meta property="og:title" content="Praxis">
     <meta property="og:url" content="http://www.beerpraxis.com">
-    <meta property="og:image" content="https://i.imgur.com/LsSyow5.png">
+    <meta property="og:image" content="https://i.imgur.com/8clFRXr.jpg">
     <meta property="og:site_name" content="praxis">
     <meta property="og:description" content="Praxis Restaurante, Fábrica e Museu da Cerveja de Coimbra. Produzimos a Cerveja Praxis com várias variedades: Pilsener, Dunkel, Ambar, Weiss.">
     <meta property="article:publisher" content="https://www.facebook.com/cervejaPraxis"/>
     <meta property="article:author" content="https://www.facebook.com/cervejaPraxis"/>
     
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     </head>
 
     <body>
@@ -310,7 +309,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/utils/Draggable.min.js"></script>
     <script src="assets/js/beer-scroll.js"></script>
     <script src="assets/js/navigation.js"></script>
 </html>
