--- a/beers/ambar.html
+++ b/beers/ambar.html
@@ -107,7 +107,7 @@
           <section class="fullscreen-wrapper single-beer-wrapper ambar-wrapper d-flex">
               <img class="bg-texture" src="../assets/images/seeds-vector-texture.svg" alt="Seeds Background">
 
-            <div class="fw align-self-end">
+            <div class="w-100 align-self-end">
               <h1>Ambar</h1>
             </div>
           </section>
