WIP - still need to improve illustrated imgs

--- a/brewery.html
+++ b/brewery.html
@@ -117,10 +117,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="present-trademark-col col-md-2 d-flex justify-content-center">
+            <div class="present-trademark-col col-2 col-md-2 d-flex justify-content-center">
               <img class="present-trademark" src="assets/images/reinheitsgebot-trademark.png">
             </div>
-            <div class="present-trademark-col col-md-6 d-flex align-items-center">
+            <div class="present-trademark-col col-12 col-md-6 d-flex align-items-center">
               <h5 class="present-trademark-name">"Reinheitsgebot", 23 de Abril de 1516<br>- Lei da Pureza da Cerveja</h5>
             </div>
           </div>
@@ -128,10 +128,10 @@
 
         <section class="process-section">
           <div class="row process-intro-wrapper">
-            <div class="col-md-5">
-              <h3>Processo de fabrico da nossa cerveja</h3>
+            <div class="col-12 col-md-5">
+              <h3 class="process-intro-title">Processo de fabrico da nossa cerveja</h3>
             </div>
-            <div class="col-md-5 offset-md-1">
+            <div class="col-12 col-md-5 offset-md-1">
               <h5 class="mb-40">A nossa Cerveja, é produzida segundo um processo 100% NATURAL
 onde a selecção da matéria-prima é o principal segredo, começando pela ÁGUA DE COIMBRA.</h5>
               <button class="button dark">Visitar museu</button>
@@ -139,10 +139,10 @@ onde a selecção da matéria-prima é o principal segredo, começando pela ÁGU
           </div>
 
           <div class="row leftsided-wrapper process-phase">
-            <div class="col-md-7">
+            <div class="col-12 col-md-7">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/malt-grains-lg.jpg"></div>
             </div>
-            <div class="col-md-4 offset-md-1">
+            <div class="col-11 col-md-4 offset-md-1 process-phase-container">
               <h3 class="process-phase-title">Maltagem</h3>
               <h5 class="process-phase-description">Os grãos são prep­­arados para o fabrico de cerveja.
                  O grão é adicionado a um tanque com água, dando em seguida a germinação. 
@@ -152,21 +152,21 @@ onde a selecção da matéria-prima é o principal segredo, começando pela ÁGU
           </div>
 
           <div class="row rightsided-wrapper process-phase">
-            <div class="col-md-4">
+            <div class="col-11 col-md-4 switcher-top process-phase-container">
               <h3 class="process-phase-title">Brassagem</h3>
               <h5 class="process-phase-description">Converte os amidos libertados na fase da maltagem em açúcares que podem ser fermentados, formando-se o mosto que depois é filtrado.</h5>
               <img class="illustrated-img" src="assets/images/process/brazing-illu.png">
             </div>
-            <div class="col-md-7 offset-md-1">
+            <div class="col-12 col-md-7 offset-md-1 switcher-bottom">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/malt-grains-lg.jpg"></div>
             </div>
           </div>
 
           <div class="row leftsided-wrapper process-phase">
-            <div class="col-md-7">
+            <div class="col-12 col-md-7">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/boiling-lg.jpg"></div>
             </div>
-            <div class="col-md-4 offset-md-1">
+            <div class="col-11 col-md-4 offset-md-1 process-phase-container">
               <h3 class="process-phase-title">Fervura</h3>
               <h5 class="process-phase-description">Dá-se a esterilização do mosto, elimina substâncias indesejáveis e dá-se a fixação final do mosto.
 Nesta fase o lúpulo é adicionado, contribuindo assim com o sabor amargo e os aromas de cerveja.</h5>
@@ -175,22 +175,22 @@ Nesta fase o lúpulo é adicionado, contribuindo assim com o sabor amargo e os a
           </div>
 
           <div class="row rightsided-wrapper process-phase">
-            <div class="col-md-4">
+            <div class="col-11 col-md-4 switcher-top process-phase-container">
               <h3 class="process-phase-title">Fermentação</h3>
               <h5 class="process-phase-description">Os açúcares do mosto, pela ação da levedura, transformam-se em álcool e dióxido de carbono.
 Na fermentação começa com a adição da levedura selecionada para o tipo de cerveja desejado.</h5>
               <img class="illustrated-img" src="assets/images/process/fermentation-illu.png">
             </div>
-            <div class="col-md-7 offset-md-1">
+            <div class="col-12 col-md-7 offset-md-1 switcher-bottom">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/boiling-lg.jpg"></div>
             </div>
           </div>
 
           <div class="row leftsided-wrapper process-phase">
-            <div class="col-md-7">
+            <div class="col-12 col-md-7">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/maturation-lg.jpg"></div>
             </div>
-            <div class="col-md-4 offset-md-1">
+            <div class="col-11 col-md-4 offset-md-1 process-phase-container">
               <h3 class="process-phase-title">Maturação</h3>
               <h5 class="process-phase-description">Período de estacionamento da cerveja, a Praxis, a temperaturas adequadas, a fim de permitir a libertação dos componentes voláteis indesejáveis.</h5>
               <img class="illustrated-img" src="assets/images/process/maturation-illu.png">
@@ -198,22 +198,22 @@ Na fermentação começa com a adição da levedura selecionada para o tipo de c
           </div>
 
           <div class="row rightsided-wrapper process-phase">
-            <div class="col-md-4">
+            <div class="col-11 col-md-4 switcher-top process-phase-container">
               <h3 class="process-phase-title">Estabilização</h3>
               <h5 class="process-phase-description">Estabiliza-se a cerveja, numa temperatura entre os 0º e os 2º C, de modo a fixarem-se as propriedades da cerveja.
 Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a limpidez desejável.</h5>
               <img class="illustrated-img" src="assets/images/process/stability-illu.png">
             </div>
-            <div class="col-md-7 offset-md-1">
+            <div class="col-12 col-md-7 offset-md-1 switcher-bottom">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/stability-lg.jpg"></div>
             </div>
           </div>
 
           <div class="row leftsided-wrapper process-phase">
-            <div class="col-md-7">
+            <div class="col-12 col-md-7">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/packing-lg.jpg"></div>
             </div>
-            <div class="col-md-4 offset-md-1">
+            <div class="col-11 col-md-4 offset-md-1 process-phase-container">
               <h3 class="process-phase-title">Enchimento</h3>
               <h5 class="process-phase-description">A cerveja é então acondicionada para distribuição e consumo, em diversos tipos de embalagem: barril, garrafa, lata, etc...</h5>
             </div>
