fixing mobile wrapping

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </section>
         
         <section class="fullscreen-wrapper light-section">
-          <h2 class="o-10">Novidades</h2>
+          <h2 class="o-10 mt-30">Novidades</h2>
 
           <div class="carousel swiper-container swiper-container-horizontal">
             <div class="swiper-wrapper">
