--- a/brewery.html
+++ b/brewery.html
@@ -31,7 +31,7 @@
     <body>
       <header class="menu">
         <nav class="navbar">
-          <a class="navbar-brand">
+          <a href="index.html" class="navbar-brand">
             <img src="assets/images/praxis-logo.svg">
           </a>
           <a class="burger-menu" href="#">
@@ -74,7 +74,7 @@
                 <li><a href="community.html" class="menu-link">Comunidade</a></li>
                 <li class="disabled"><a href="" class="menu-link">Loja Online</a></li>
               </ul>
-              <div class="media-links-container d-flex">
+              <div class="media-links-container-vertical d-flex">
                 <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
                   <img src="assets/images/facebook-logo.svg">
                 </a>
