--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
       <header class="menu">
         <nav class="navbar">
-          <a class="navbar-brand">
+          <a href="index.html" class="navbar-brand">
             <img src="assets/images/praxis-logo.svg">
           </a>
           <a class="burger-menu" href="#">
@@ -74,7 +74,7 @@
                 <li><a href="community.html" class="menu-link">Comunidade</a></li>
                 <li class="disabled"><a href="" class="menu-link">Loja Online</a></li>
               </ul>
-              <div class="media-links-container d-flex">
+              <div class="media-links-container-vertical d-flex">
                 <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
                   <img src="assets/images/facebook-logo.svg">
                 </a>
@@ -302,6 +302,56 @@
             </div>
           </div>
         </section>
+
+        <footer class="footer">
+          <div class="row sitemap-wrapper">
+            <div class="col-md-3 justify-content-between flex-column">
+              <img src="assets/images/praxis-logo.svg">
+              <div class="media-links-container-horizontal d-flex">
+                <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
+                  <img src="assets/images/facebook-logo.svg">
+                </a>
+                <a href="https://www.instagram.com/praxisbeer/" class="media-link instagram">
+                  <img src="assets/images/instagram-logo.svg">
+                </a>
+                <!-- Youtube Link Missing -->
+                <a href="" class="media-link youtube">
+                  <img src="assets/images/youtube-logo.svg">
+                </a>
+                <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" class="media-link tripadvisor">
+                  <img src="assets/images/tripadvisor-logo.svg">
+                </a>
+                <a href="https://untappd.com/w/praxis/34853/" class="media-link untappd">
+                  <img src="assets/images/untappd-logo.svg">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-2 sitemap">
+              <a href="shop.html"><h6 class="footer-link">Loja</h6></a>
+              <a href="community.html"><h6 class="footer-link">Comunidade</h6></a>
+              <a href="contacts.html"><h6 class="footer-link">Contactos</h6></a>
+              <a href="community"><h6 class="footer-link">Eventos</h6></a>
+            </div>
+            <div class="col-md-3 policies">
+              <a href="" class="footer-link"><small>Perguntas frequentes</small></a>
+              <a href="" class="footer-link"><small>Termos e Condições</small></a>
+              <a href="" class="footer-link"><small>Política de Privacidade</small></a>
+            </div>
+            <div class="col-md-4 newsletter">
+              <label>Fica a par das novidades</label>
+              <div class="d-flex newsletter-field-container">
+                <input type="email" placeholder="Insere o teu email..." class="field-input light">
+                <button class="button light">Subscrever</button>
+              </div>
+            </div>
+          </div>
+          <div class="row rights-wrapper">
+            <div class="col-12 d-flex justify-content-between">
+              <small>® 2020 Praxis. Todos os direitos reservados</small>
+              <small>Made by F*Amazing</small>
+            </div>
+          </div>
+        </footer>
       </main>
     </body>
 
