--- a/index.html
+++ b/index.html
@@ -305,8 +305,10 @@
 
         <footer class="footer">
           <div class="row sitemap-wrapper">
-            <div class="col-md-3 justify-content-between flex-column">
-              <img src="assets/images/praxis-logo.svg">
+            <div class="col-12 col-md-3 media-links-wrapper d-flex justify-content-between flex-column">
+              <div>
+                <img src="assets/images/praxis-logo.svg">
+              </div>
               <div class="media-links-container-horizontal d-flex">
                 <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
                   <img src="assets/images/facebook-logo.svg">
@@ -326,18 +328,19 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-2 sitemap">
+            <div class="col-5 col-md-2 sitemap">
               <a href="shop.html"><h6 class="footer-link">Loja</h6></a>
               <a href="community.html"><h6 class="footer-link">Comunidade</h6></a>
               <a href="contacts.html"><h6 class="footer-link">Contactos</h6></a>
               <a href="community"><h6 class="footer-link">Eventos</h6></a>
             </div>
-            <div class="col-md-3 policies">
+            <div class="col-7 col-md-3 policies">
               <a href="" class="footer-link"><small>Perguntas frequentes</small></a>
               <a href="" class="footer-link"><small>Termos e Condições</small></a>
               <a href="" class="footer-link"><small>Política de Privacidade</small></a>
+              <a href="" class="footer-link"><small>Livro de reclamações</small></a>
             </div>
-            <div class="col-md-4 newsletter">
+            <div class="col-12 col-md-4 newsletter">
               <label>Fica a par das novidades</label>
               <div class="d-flex newsletter-field-container">
                 <input type="email" placeholder="Insere o teu email..." class="field-input light">
@@ -346,9 +349,9 @@
             </div>
           </div>
           <div class="row rights-wrapper">
-            <div class="col-12 d-flex justify-content-between">
-              <small>® 2020 Praxis. Todos os direitos reservados</small>
-              <small>Made by F*Amazing</small>
+            <div class="col-12 rights-container d-flex justify-content-between">
+              <small class="mb-20">® 2020 Praxis. Todos os direitos reservados</small>
+              <small class="mb-20">Made by F*Amazing</small>
             </div>
           </div>
         </footer>
