next page banner completed

--- a/brewery.html
+++ b/brewery.html
@@ -220,6 +220,24 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
           </div>
         </section>
 
+        <section class="next-page mt-100">
+          <a href="" class="next-page-link">
+            <div class="next-page-media">
+              <img src="./assets/images/visit-banner.jpg" alt="Come visit us">
+            </div>
+            <div class="next-page-content">
+              <div class="row">
+                <div class="col-12">
+                  <h6 class="next-page-surtitle">Descobre a Praxis</h6>
+                </div>
+                <div class="col-12">
+                  <h3 class="next-page-title">Vem visitar-nos</h3>
+                </div>
+              </div>
+            </div>
+          </a>
+        </section>
+
         <footer class="footer">
           <div class="row sitemap-wrapper">
             <div class="col-12 col-md-3 media-links-wrapper d-flex justify-content-between flex-column">
